<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.eclipse.jdt.core</groupId>
	<artifactId>org-eclipse-jdt-core</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.target>17</maven.compiler.target>
		<maven.compiler.source>17</maven.compiler.source>
	</properties>
	<modules>
		<module>org.eclipse.jdt.core.impl</module>
		<module>org.eclipse.core.resources</module>
		<module>org.eclipse.core.runtime</module>
		<module>org.eclipse.core.commands</module>
		<module>org.eclipse.core.contenttype</module>
		<module>org.eclipse.core.filesystem</module>
		<module>org.eclipse.core.jobs</module>
		<module>org.eclipse.core.expressions</module>
		<module>org.eclipse.equinox.common</module>
		<module>org.eclipse.equinox.app</module>
		<module>org.eclipse.equinox.preferences</module>
		<module>org.eclipse.equinox.registry</module>
		<module>org.eclipse.text</module>
		<module>org.eclipse.osgi</module>
		<module>org.osgi.annotation.versioning</module>
		<module>org.osgi.annotation.bundle</module>
		<module>org.osgi.service.component</module>
		<module>org.osgi.service.event</module>
		<module>org.osgi.util.promise</module>
		<module>org.osgi.util.function</module>
		<module>org.osgi.namespace.extender</module>
		<module>org.osgi.namespace.implementation</module>
	</modules>
</project>